fix bug in clone repo

--- a/front/src/html/index.html
+++ b/front/src/html/index.html
@@ -10,7 +10,8 @@
 	<script src="../js/main.js"></script>
 </head>
 <body>
-	<h1>Hello jdsafl;sdkjf!</h1>
-
+	<h1>Hello, world!</h1>
+	<img src="../img/javascript.svg" alt="JS" width="128"/>
+	<p>Если запущен сервер и база данных, в консоли должно быть сообщение <i>DB ok</i></p>
 </body>
 </html>
